--- a/scss/window/_tab-headers.scss
+++ b/scss/window/_tab-headers.scss
@@ -14,6 +14,7 @@ body {
     --tab-text-color-focused-active: var(--text-muted);
     --tab-text-color-focused-active-current: var(--text-normal);
     --tab-text-color-focused-highlighted: var(--text-accent);
+    --sidedock-tab-header-padding-bottom: 0px;
 }
 
 // default icon opacity 
