--- a/css/editor/callouts/callout-paper-fold.css
+++ b/css/editor/callouts/callout-paper-fold.css
@@ -24,32 +24,40 @@
   --corner-angle: 60deg;
 }
 
+/*
 @property --corner-width-n {
-  syntax: "<number>";
-  inherits: true;
-  initial-value: 70;
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 70;
 }
+
 @property --corner-height-n {
-  syntax: "<number>";
-  inherits: true;
-  initial-value: 700;
+    syntax: "<number>";
+    inherits: true;
+    initial-value: 700;
 }
-.callout[data-callout=paper-fold] {
-  --corner-width: calc(1px * var(--corner-width-n));
-  --corner-height: calc(1px * var(--corner-height-n));
-  --corner-diag: calc(1px * var(--corner-diag-n));
-  --corner-diag-n: calc(var(--corner-width-n) * var(--corner-height-n) / hypot(var(--corner-width-n), var(--corner-height-n)));
-  --corner-angle: calc(asin(var(--corner-diag-n) / var(--corner-width-n)));
-  transition: --corner-width-n 0.5s ease-out, --corner-height-n 0.5s ease-out;
+.callout[data-callout="paper-fold"] {
+    --corner-width: calc(1px * var(--corner-width-n));
+    --corner-height: calc(1px * var(--corner-height-n));
+    --corner-diag: calc(1px * var(--corner-diag-n));
+    --corner-diag-n: calc(var(--corner-width-n) * var(--corner-height-n) / hypot(var(--corner-width-n), var(--corner-height-n)));
+    --corner-angle: calc(asin(var(--corner-diag-n) / var(--corner-width-n)));
+    transition: --corner-width-n 0.5s ease-out, --corner-height-n 0.5s ease-out;
+}
+.callout[data-callout="paper-fold"]:hover {
+    --corner-width-n: 80;
+    --corner-height-n: 20;
+}*/
+.theme-dark {
+  --paper-fold-color: 255, 247, 64;
 }
 
-.callout[data-callout=paper-fold]:hover {
-  --corner-width-n: 80;
-  --corner-height-n: 20;
+.theme-dark {
+  --paper-fold-color: 255, 255, 153;
 }
 
 .callout[data-callout=paper-fold] {
-  --callout-color: var(--color-yellow-rgb);
+  --callout-color: var(--paper-fold-color);
   --metadata-property-radius: 0;
   --metadata-padding: 0 0 8px 0;
   --postit-color: hsl(from rgb(var(--callout-color)) h s l / 0.7);
