--- a/scss/editor/callouts/_callout-timeline.scss
+++ b/scss/editor/callouts/_callout-timeline.scss
@@ -72,7 +72,7 @@
             color: color-mix(in srgb, rgb(var(--callout-color)), var(--text-normal) 40%);
             font-weight: var(--font-bold);
             font-size: 1.5em;
-            font-family: "Playfair Display";
+            font-family: "Playfair Display", Georgia, 'Times New Roman', Times, serif;
         }
         
         // for callout children
