--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -4,7 +4,7 @@
 @use 'print';
 
 
-@use 'canvas/canvas';
+/*@use 'canvas/canvas';*/
 @use 'components/components';
 @use 'editor/editor';
 @use 'plugins/plugins';
