--- a/css/cssclasses/columns.css
+++ b/css/cssclasses/columns.css
@@ -1,3 +1,7 @@
+.markdown-source-view, .markdown-reading-view {
+  container: markdown-view/size;
+}
+
 .columns-2.markdown-preview-view .markdown-preview-section {
   column-count: 2;
 }
