--- a/css/editor/callouts/callout-grid.css
+++ b/css/editor/callouts/callout-grid.css
@@ -1,3 +1,7 @@
+.markdown-source-view, .markdown-reading-view {
+  container: markdown-view/size;
+}
+
 .callout[data-callout=grid] {
   background: none;
   border: none;
