--- a/scss/canvas/_canvas-node-image.scss
+++ b/scss/canvas/_canvas-node-image.scss
@@ -1,3 +1,5 @@
+@forward '../shared/markdown-container';
+
 .canvas-node:has(.tag[href="#node-image"]):not(.is-editing) {
     --p-spacing: 0;
     --image-shadow-offset: 0;
