--- a/scss/cssclasses/_newspaper.scss
+++ b/scss/cssclasses/_newspaper.scss
@@ -1,5 +1,6 @@
 @forward '../shared/paper-texture';
 @forward '../shared/workleaves';
+@forward '../shared/markdown-container';
 
 .newspaper {
     background-color: var(--workleaves-background);
