--- a/scss/editor/_aside.scss
+++ b/scss/editor/_aside.scss
@@ -1,3 +1,5 @@
+@forward '../shared/markdown-container';
+
 .markdown-preview-view aside,
 .markdown-preview-view .aside-left,
 .markdown-preview-view .aside-right {
