--- a/scss/editor/embeds/_audio-cassette.scss
+++ b/scss/editor/embeds/_audio-cassette.scss
@@ -1,4 +1,5 @@
 @forward '../../shared/shadow-color';
+@forward '../../shared/markdown-container';
 
 .media-embed[alt*="cassette"] {
     --cassette-width: 0.8;
