--- a/scss/editor/embeds/_embed-wide.scss
+++ b/scss/editor/embeds/_embed-wide.scss
@@ -1,3 +1,5 @@
+@forward '../../shared/markdown-container';
+
 .markdown-preview-view [alt~="wide"]:is(img, .image-embed, .markdown-embed, .file-embed) {
     --w: 95cqw;
     position: relative;
