--- a/scss/plugins/community/dataview/_dataview-wide.scss
+++ b/scss/plugins/community/dataview/_dataview-wide.scss
@@ -1,3 +1,5 @@
+@forward '../../../shared/markdown-container';
+
 .block-language-dataviewjs:has(.dataview-wide) {
     overflow: visible !important;
 }
