--- a/css/editor/embeds/embed-wide.css
+++ b/css/editor/embeds/embed-wide.css
@@ -1,3 +1,7 @@
+.markdown-source-view, .markdown-reading-view {
+  container: markdown-view/size;
+}
+
 .markdown-preview-view [alt~=wide]:is(img, .image-embed, .markdown-embed, .file-embed) {
   --w: 95cqw;
   position: relative;
