--- a/css/plugins/community/dataview/dataview-wide.css
+++ b/css/plugins/community/dataview/dataview-wide.css
@@ -1,3 +1,7 @@
+.markdown-source-view, .markdown-reading-view {
+  container: markdown-view/size;
+}
+
 .block-language-dataviewjs:has(.dataview-wide) {
   overflow: visible !important;
 }
