--- a/scss/editor/callouts/_callouts-metadata.scss
+++ b/scss/editor/callouts/_callouts-metadata.scss
@@ -1,3 +1,4 @@
+@forward '../../shared/markdown-container';
 
 .callout[data-callout-metadata~="gray"]   { --callout-color: var(--color-gray-rgb);}
 .callout[data-callout-metadata~="brown"]  { --callout-color: var(--color-brown-rgb);}
