--- a/css/editor/callouts/callout-poem.css
+++ b/css/editor/callouts/callout-poem.css
@@ -3,6 +3,10 @@ body {
   --workleaves-foreground: var(--text-normal);
 }
 
+.markdown-source-view, .markdown-reading-view {
+  container: markdown-view/size;
+}
+
 body {
   --poem-border-width: 1px;
   --poem-color: var(--color-blue-rgb);
