--- a/scss/css/editor/lists/tasks.scss
+++ b/scss/css/editor/lists/tasks.scss
@@ -1,1 +1,3 @@
-@use '../../../editor/lists/tasks';
+@use '../../../editor/lists/tasks/tasks-standard-boxes';
+@use '../../../editor/lists/tasks/tasks-alternate-icons';
+@use '../../../editor/lists/tasks/assets-alternate-icons-lucide';
