--- a/scss/editor/lists/tasks/_tasks-alternate-icons.scss
+++ b/scss/editor/lists/tasks/_tasks-alternate-icons.scss
@@ -1,5 +1,9 @@
 @use 'tasks-definition';
 
+body {
+    --alternative-checkboxes: enable;
+}
+
 // Alternative checkboxes
 $sel: ":is(";
 @each $label, $icon, $color in tasks-definition.$supported-icon-labels {
@@ -7,26 +11,29 @@ $sel: ":is(";
     $sel: $sel + "[data-task='#{$label}']";
 }
 $sel: $sel + ")";
-:is(.HyperMD-task-line, .task-list-item)#{$sel} input[type=checkbox] {
-    pointer-events: none;
 
-    &, &:checked {
-        background: none;
-        border: none;
+@container style(--alternative-checkboxes: enable) {
+    :is(.HyperMD-task-line, .task-list-item)#{$sel} input[type=checkbox] {
+        pointer-events: none;
+    
+        &, &:checked {
+            background: none;
+            border: none;
+        }
+    
+        &::after,
+        &:checked::after {
+            @include tasks-definition.icon-after;
+        }
     }
-
-    &::after,
-    &:checked::after {
-        @include tasks-definition.icon-after;
-    }
-}
-@each $label, $icon, $color in tasks-definition.$supported-icon-labels {
-    :is(.HyperMD-task-line, .task-list-item)[data-task='#{$label}'] {
-        --checkbox-color: var(--color-#{$color});
-
-        input[type=checkbox]::after,
-        input[type=checkbox]:checked::after {
-            mask-image: var(--icon-#{$icon});
+    @each $label, $icon, $color in tasks-definition.$supported-icon-labels {
+        :is(.HyperMD-task-line, .task-list-item)[data-task='#{$label}'] {
+            --checkbox-color: var(--color-#{$color});
+    
+            input[type=checkbox]::after,
+            input[type=checkbox]:checked::after {
+                mask-image: var(--icon-#{$icon});
+            }
         }
     }
 }
